Align contact grid items to start to prevent form card stretch

--- a/css/style.css
+++ b/css/style.css
@@ -876,6 +876,7 @@ section {
     width: 100%;
     margin-top: 3rem;
     text-align: left;
+    align-items: start;
 }
 
 .contact-card-container {
